--- a/notes/grid364_changedDepth.ccmetagen.classification.html
+++ b/notes/grid364_changedDepth.ccmetagen.classification.html
@@ -6633,143 +6633,219 @@ function zoomOut()
     <dataset>grid364_changedDepth.ccmetagen.classification</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>9386.60999999999</val></magnitude>
- <magnitudeUnassigned><val>23.9</val></magnitudeUnassigned>
- <node name="Viruses">
-  <magnitude><val>8.12</val></magnitude>
-  <node name="Uroviricota">
-   <magnitude><val>8.12</val></magnitude>
-   <node name="Caudoviricetes">
-    <magnitude><val>8.12</val></magnitude>
-    <node name="Caudovirales">
-     <magnitude><val>8.12</val></magnitude>
-     <magnitudeUnassigned><val>5.21</val></magnitudeUnassigned>
-     <node name="Siphoviridae">
-      <magnitude><val>2.91</val></magnitude>
+ <magnitude><val>9485346025.46</val></magnitude>
+ <magnitudeUnassigned><val>67882.97</val></magnitudeUnassigned>
+ <node name="Bacteria">
+  <magnitudeUnassigned><val>1793849.73</val></magnitudeUnassigned>
+  <magnitude><val>9144782821.62</val></magnitude>
+  <node name="Firmicutes">
+   <magnitudeUnassigned><val>1411.14</val></magnitudeUnassigned>
+   <magnitude><val>6440477329.96</val></magnitude>
+   <node name="Bacilli">
+    <magnitude><val>6440475918.82</val></magnitude>
+    <node name="Lactobacillales">
+     <magnitude><val>1996756216.89</val></magnitude>
+     <node name="Lactobacillaceae">
+      <magnitudeUnassigned><val>123711883.12</val></magnitudeUnassigned>
+      <magnitude><val>850712346.58</val></magnitude>
+      <node name="Limosilactobacillus">
+       <magnitudeUnassigned><val>725257213.71</val></magnitudeUnassigned>
+       <magnitude><val>727000463.46</val></magnitude>
+       <node name="Limosilactobacillus fermentum">
+        <magnitude><val>1743249.75</val></magnitude>
+       </node>
+      </node>
+     </node>
+     <node name="Enterococcaceae">
+      <magnitudeUnassigned><val>301180195.18</val></magnitudeUnassigned>
+      <magnitude><val>1146024178.27</val></magnitude>
+      <node name="Enterococcus">
+       <magnitudeUnassigned><val>843114370.53</val></magnitudeUnassigned>
+       <magnitude><val>844843983.09</val></magnitude>
+       <node name="Enterococcus faecalis">
+        <magnitude><val>1729612.56</val></magnitude>
+       </node>
+      </node>
+     </node>
+     <node name="Leuconostocaceae">
+      <magnitude><val>19692.04</val></magnitude>
+      <node name="Leuconostoc">
+       <magnitude><val>19692.04</val></magnitude>
+      </node>
+     </node>
+    </node>
+    <node name="Bacillales">
+     <magnitude><val>4443719701.93</val></magnitude>
+     <magnitudeUnassigned><val>2980.64</val></magnitudeUnassigned>
+     <node name="Listeriaceae">
+      <magnitude><val>1405397485.56</val></magnitude>
+      <magnitudeUnassigned><val>163040417.73</val></magnitudeUnassigned>
+      <node name="Listeria">
+       <magnitude><val>1242357067.83</val></magnitude>
+       <magnitudeUnassigned><val>11650985.28</val></magnitudeUnassigned>
+       <node name="Listeria monocytogenes">
+        <magnitude><val>1230706082.55</val></magnitude>
+       </node>
+      </node>
+     </node>
+     <node name="Bacillaceae">
+      <magnitudeUnassigned><val>13144.18</val></magnitudeUnassigned>
+      <magnitude><val>1889927803.67</val></magnitude>
+      <node name="Bacillus">
+       <magnitude><val>1889914659.49</val></magnitude>
+       <magnitudeUnassigned><val>50114366.61</val></magnitudeUnassigned>
+       <node name="Bacillus spizizenii">
+        <magnitude><val>1839800292.88</val></magnitude>
+       </node>
+      </node>
+     </node>
+     <node name="Staphylococcaceae">
+      <magnitudeUnassigned><val>30104010.3</val></magnitudeUnassigned>
+      <magnitude><val>1148391432.06</val></magnitude>
+      <node name="Staphylococcus">
+       <magnitude><val>1118287421.76</val></magnitude>
+       <magnitudeUnassigned><val>82840158.67</val></magnitudeUnassigned>
+       <node name="Staphylococcus aureus">
+        <magnitude><val>1035447263.09</val></magnitude>
+       </node>
+      </node>
      </node>
     </node>
    </node>
   </node>
- </node>
- <node name="Bacteria">
-  <magnitudeUnassigned><val>49.15</val></magnitudeUnassigned>
-  <magnitude><val>7123.86</val></magnitude>
   <node name="Proteobacteria">
-   <magnitude><val>1426</val></magnitude>
+   <magnitude><val>2702511641.93</val></magnitude>
    <node name="Gammaproteobacteria">
-    <magnitude><val>1426</val></magnitude>
+    <magnitude><val>2702511641.93</val></magnitude>
     <node name="Pseudomonadales">
-     <magnitudeUnassigned><val>11.79</val></magnitudeUnassigned>
-     <magnitude><val>181.9</val></magnitude>
+     <magnitudeUnassigned><val>672077.16</val></magnitudeUnassigned>
+     <magnitude><val>822175693.19</val></magnitude>
      <node name="Pseudomonadaceae">
-      <magnitude><val>170.11</val></magnitude>
-      <magnitudeUnassigned><val>130.67</val></magnitudeUnassigned>
+      <magnitude><val>821503616.03</val></magnitude>
+      <magnitudeUnassigned><val>820933119.64</val></magnitudeUnassigned>
       <node name="Pseudomonas">
-       <magnitude><val>39.44</val></magnitude>
-       <magnitudeUnassigned><val>14.13</val></magnitudeUnassigned>
+       <magnitude><val>570496.39</val></magnitude>
+       <magnitudeUnassigned><val>128760.96</val></magnitudeUnassigned>
        <node name="Pseudomonas aeruginosa">
-        <magnitude><val>25.31</val></magnitude>
+        <magnitude><val>441735.43</val></magnitude>
        </node>
       </node>
      </node>
     </node>
     <node name="Enterobacterales">
-     <magnitudeUnassigned><val>0.67</val></magnitudeUnassigned>
-     <magnitude><val>1244.1</val></magnitude>
+     <magnitudeUnassigned><val>12281.77</val></magnitudeUnassigned>
+     <magnitude><val>1880335948.74</val></magnitude>
      <node name="Enterobacteriaceae">
-      <magnitudeUnassigned><val>418.85</val></magnitudeUnassigned>
-      <magnitude><val>1243.43</val></magnitude>
-      <node name="Salmonella">
-       <magnitudeUnassigned><val>10.64</val></magnitudeUnassigned>
-       <magnitude><val>398.53</val></magnitude>
-       <node name="Salmonella enterica">
-        <magnitude><val>387.89</val></magnitude>
+      <magnitude><val>1880323666.97</val></magnitude>
+      <magnitudeUnassigned><val>430832115.28</val></magnitudeUnassigned>
+      <node name="Escherichia">
+       <magnitude><val>459700592.8</val></magnitude>
+       <magnitudeUnassigned><val>155725945.72</val></magnitudeUnassigned>
+       <node name="Escherichia coli">
+        <magnitude><val>303974647.08</val></magnitude>
        </node>
       </node>
-      <node name="Escherichia">
-       <magnitudeUnassigned><val>99.34</val></magnitudeUnassigned>
-       <magnitude><val>426.05</val></magnitude>
-       <node name="Escherichia coli">
-        <magnitude><val>326.71</val></magnitude>
+      <node name="Salmonella">
+       <magnitude><val>989790958.89</val></magnitude>
+       <magnitudeUnassigned><val>589604.96</val></magnitudeUnassigned>
+       <node name="Salmonella enterica">
+        <magnitude><val>989201353.93</val></magnitude>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Firmicutes">
-   <magnitude><val>5648.71</val></magnitude>
-   <magnitudeUnassigned><val>1.74</val></magnitudeUnassigned>
-   <node name="Bacilli">
-    <magnitude><val>5646.97</val></magnitude>
-    <node name="Bacillales">
-     <magnitude><val>4193.15</val></magnitude>
-     <magnitudeUnassigned><val>2.08</val></magnitudeUnassigned>
-     <node name="Bacillaceae">
-      <magnitude><val>479.08</val></magnitude>
-      <magnitudeUnassigned><val>9.86</val></magnitudeUnassigned>
-      <node name="Bacillus">
-       <magnitude><val>469.22</val></magnitude>
-       <magnitudeUnassigned><val>12.43</val></magnitudeUnassigned>
-       <node name="Bacillus spizizenii">
-        <magnitude><val>456.79</val></magnitude>
-       </node>
-      </node>
+ </node>
+ <node name="Viruses">
+  <magnitude><val>98774.4</val></magnitude>
+  <node name="Uroviricota">
+   <magnitude><val>98774.4</val></magnitude>
+   <node name="Caudoviricetes">
+    <magnitude><val>98774.4</val></magnitude>
+    <node name="Caudovirales">
+     <magnitude><val>98774.4</val></magnitude>
+     <node name="Siphoviridae">
+      <magnitude><val>98774.4</val></magnitude>
      </node>
-     <node name="Listeriaceae">
-      <magnitude><val>1301.21</val></magnitude>
-      <magnitudeUnassigned><val>68.61</val></magnitudeUnassigned>
-      <node name="Listeria">
-       <magnitudeUnassigned><val>3.96</val></magnitudeUnassigned>
-       <magnitude><val>1232.6</val></magnitude>
-       <node name="Listeria monocytogenes">
-        <magnitude><val>1228.64</val></magnitude>
-       </node>
-      </node>
-     </node>
-     <node name="Staphylococcaceae">
-      <magnitudeUnassigned><val>469.5</val></magnitudeUnassigned>
-      <magnitude><val>2410.78</val></magnitude>
-      <node name="Staphylococcus">
-       <magnitudeUnassigned><val>867.84</val></magnitudeUnassigned>
-       <magnitude><val>1935.78</val></magnitude>
-       <node name="Staphylococcus aureus">
-        <magnitude><val>1067.94</val></magnitude>
-       </node>
-      </node>
-      <node name="Mammaliicoccus">
-       <magnitude><val>5.5</val></magnitude>
+    </node>
+   </node>
+  </node>
+ </node>
+ <node name="Eukaryota">
+  <magnitude><val>339486853.47</val></magnitude>
+  <node name="Metazoa">
+   <magnitude><val>7343.1</val></magnitude>
+   <node name="Chordata">
+    <magnitude><val>7343.1</val></magnitude>
+    <node name="Mammalia">
+     <magnitude><val>7343.1</val></magnitude>
+     <node name="Rodentia">
+      <magnitude><val>7343.1</val></magnitude>
+      <node name="Muridae">
+       <magnitude><val>7343.1</val></magnitude>
       </node>
      </node>
     </node>
-    <node name="Lactobacillales">
-     <magnitude><val>1453.82</val></magnitude>
-     <node name="Enterococcaceae">
-      <magnitude><val>614.05</val></magnitude>
-      <magnitudeUnassigned><val>112.06</val></magnitudeUnassigned>
-      <node name="Enterococcus">
-       <magnitudeUnassigned><val>290.4</val></magnitudeUnassigned>
-       <magnitude><val>501.99</val></magnitude>
-       <node name="Enterococcus faecalis">
-        <magnitude><val>211.59</val></magnitude>
+   </node>
+  </node>
+  <node name="Fungi">
+   <magnitudeUnassigned><val>6359.15</val></magnitudeUnassigned>
+   <magnitude><val>339479510.37</val></magnitude>
+   <node name="Ascomycota">
+    <magnitude><val>139808476.2</val></magnitude>
+    <node name="Saccharomycetes">
+     <magnitudeUnassigned><val>425</val></magnitudeUnassigned>
+     <magnitude><val>139808476.2</val></magnitude>
+     <node name="Saccharomycetales">
+      <magnitude><val>139808051.2</val></magnitude>
+      <magnitudeUnassigned><val>6952.32</val></magnitudeUnassigned>
+      <node name="Debaryomycetaceae">
+       <magnitude><val>302.94</val></magnitude>
+      </node>
+      <node name="Saccharomycetaceae">
+       <magnitudeUnassigned><val>108093451.73</val></magnitudeUnassigned>
+       <magnitude><val>139800795.94</val></magnitude>
+       <node name="Saccharomyces">
+        <magnitude><val>31707344.21</val></magnitude>
+        <magnitudeUnassigned><val>22153345.43</val></magnitudeUnassigned>
+        <node name="Saccharomyces cerevisiae">
+         <magnitude><val>9553998.78</val></magnitude>
+        </node>
        </node>
       </node>
      </node>
-     <node name="Lactobacillaceae">
-      <magnitude><val>827.09</val></magnitude>
-      <magnitudeUnassigned><val>122.44</val></magnitudeUnassigned>
-      <node name="Limosilactobacillus">
-       <magnitudeUnassigned><val>344.4</val></magnitudeUnassigned>
-       <magnitude><val>704.65</val></magnitude>
-       <node name="Limosilactobacillus fermentum">
-        <magnitude><val>360.25</val></magnitude>
+    </node>
+   </node>
+   <node name="Basidiomycota">
+    <magnitude><val>199664675.02</val></magnitude>
+    <node name="Tremellomycetes">
+     <magnitude><val>199664675.02</val></magnitude>
+     <node name="Tremellales">
+      <magnitude><val>199590864.78</val></magnitude>
+      <magnitudeUnassigned><val>12313.07</val></magnitudeUnassigned>
+      <node name="Cryptococcaceae">
+       <magnitudeUnassigned><val>4984827.31</val></magnitudeUnassigned>
+       <magnitude><val>199578551.71</val></magnitude>
+       <node name="Cryptococcus">
+        <magnitude><val>194593724.4</val></magnitude>
+        <magnitudeUnassigned><val>144481578.48</val></magnitudeUnassigned>
+        <node name="Cryptococcus neoformans">
+         <magnitude><val>49459556.64</val></magnitude>
+        </node>
+        <node name="Cryptococcus neoformans AD hybrid">
+         <magnitude><val>652589.28</val></magnitude>
+        </node>
        </node>
       </node>
      </node>
-     <node name="Leuconostocaceae">
-      <magnitude><val>12.68</val></magnitude>
-      <node name="Leuconostoc">
-       <magnitude><val>12.68</val></magnitude>
+     <node name="Cystofilobasidiales">
+      <magnitude><val>73810.24</val></magnitude>
+      <node name="Mrakiaceae">
+       <magnitude><val>73810.24</val></magnitude>
+       <node name="Phaffia">
+        <magnitude><val>73810.24</val></magnitude>
+       </node>
       </node>
      </node>
     </node>
@@ -6777,118 +6853,7 @@ function zoomOut()
   </node>
  </node>
  <node name="synthetic construct">
-  <magnitude><val>99.42</val></magnitude>
- </node>
- <node name="Eukaryota">
-  <magnitude><val>2131.31</val></magnitude>
-  <node name="Metazoa">
-   <magnitude><val>6.61</val></magnitude>
-   <node name="Chordata">
-    <magnitude><val>6.61</val></magnitude>
-    <node name="Mammalia">
-     <magnitude><val>6.61</val></magnitude>
-     <node name="Artiodactyla">
-      <magnitude><val>0.41</val></magnitude>
-      <node name="Bovidae">
-       <magnitude><val>0.41</val></magnitude>
-       <node name="Bos">
-        <magnitude><val>0.41</val></magnitude>
-       </node>
-      </node>
-     </node>
-     <node name="Primates">
-      <magnitude><val>0.59</val></magnitude>
-      <node name="Cebidae">
-       <magnitude><val>0.59</val></magnitude>
-       <node name="Sapajus">
-        <magnitude><val>0.59</val></magnitude>
-        <node name="Sapajus apella">
-         <magnitude><val>0.59</val></magnitude>
-        </node>
-       </node>
-      </node>
-     </node>
-     <node name="Rodentia">
-      <magnitude><val>4.9</val></magnitude>
-      <node name="Muridae">
-       <magnitude><val>4.9</val></magnitude>
-       <magnitudeUnassigned><val>0.9</val></magnitudeUnassigned>
-       <node name="Mus">
-        <magnitude><val>4</val></magnitude>
-        <node name="Mus musculus">
-         <magnitude><val>4</val></magnitude>
-        </node>
-       </node>
-      </node>
-     </node>
-     <node name="Perissodactyla">
-      <magnitude><val>0.71</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Fungi">
-   <magnitude><val>2124.7</val></magnitude>
-   <magnitudeUnassigned><val>5.92</val></magnitudeUnassigned>
-   <node name="Basidiomycota">
-    <magnitude><val>1492.39</val></magnitude>
-    <node name="Tremellomycetes">
-     <magnitude><val>1492.39</val></magnitude>
-     <node name="Tremellales">
-      <magnitude><val>1464.6</val></magnitude>
-      <magnitudeUnassigned><val>4.52</val></magnitudeUnassigned>
-      <node name="Cryptococcaceae">
-       <magnitude><val>1460.08</val></magnitude>
-       <magnitudeUnassigned><val>221.68</val></magnitudeUnassigned>
-       <node name="Cryptococcus">
-        <magnitudeUnassigned><val>112.24</val></magnitudeUnassigned>
-        <magnitude><val>1238.4</val></magnitude>
-        <node name="Cryptococcus neoformans">
-         <magnitude><val>858.08</val></magnitude>
-        </node>
-        <node name="Cryptococcus neoformans AD hybrid">
-         <magnitude><val>268.08</val></magnitude>
-        </node>
-       </node>
-      </node>
-     </node>
-     <node name="Cystofilobasidiales">
-      <magnitude><val>27.79</val></magnitude>
-      <node name="Mrakiaceae">
-       <magnitude><val>27.79</val></magnitude>
-       <node name="Phaffia">
-        <magnitude><val>27.79</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Ascomycota">
-    <magnitude><val>626.39</val></magnitude>
-    <node name="Saccharomycetes">
-     <magnitudeUnassigned><val>0.85</val></magnitudeUnassigned>
-     <magnitude><val>626.39</val></magnitude>
-     <node name="Saccharomycetales">
-      <magnitudeUnassigned><val>2.04</val></magnitudeUnassigned>
-      <magnitude><val>625.54</val></magnitude>
-      <node name="Debaryomycetaceae">
-       <magnitude><val>0.66</val></magnitude>
-      </node>
-      <node name="Saccharomycetaceae">
-       <magnitudeUnassigned><val>316.59</val></magnitudeUnassigned>
-       <magnitude><val>622.84</val></magnitude>
-       <node name="Saccharomyces">
-        <magnitudeUnassigned><val>133.85</val></magnitudeUnassigned>
-        <magnitude><val>306.25</val></magnitude>
-        <node name="Saccharomyces cerevisiae">
-         <magnitude><val>172.4</val></magnitude>
-        </node>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
+  <magnitude><val>909693</val></magnitude>
  </node>
 </node>
   </krona>
